tests/ui/coherence/negative-coherence-considering-regions.any_lt.stderr
error[E0119]: conflicting implementations of trait `Bar` for type `&_`
  --> $DIR/negative-coherence-considering-regions.rs:16:1
   |
LL | impl<T> Bar for T where T: Foo {}
   | ------------------------------ first implementation here
...
LL | impl<T> Bar for &T {}
   | ^^^^^^^^^^^^^^^^^^ conflicting implementation for `&_`
   |
   = note: downstream crates may implement trait `Foo` for type `&_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
